# dora

./: README.md  REQUIREMENTS.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
docs/plans/: 2026-03-28-dora-mvp-plan.md  2026-03-29-dora-mvp-local-closed-loop.md  2026-03-29-dora-phase-2-plan.md
docs/specs/: 2025-03-28-dora-design.md  2026-03-28-dora-mvp-spec.md  2026-03-29-dora-phase-2-spec.md  2026-03-30-current-spec.md
e2e/: games.spec.ts
playwright-report/: index.html
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  settings.rs  storage.rs  windowing.rs
src/components/: Avatar.tsx  ChatWindow.tsx  FloatingWidget.tsx  GamePanel.tsx  MemoPad.tsx  MemoryPanel.tsx  SettingsPanel.tsx  WindowHeader.tsx
src/components/__tests__/: App.test.tsx  ChatWindow.test.tsx  MemoPad.test.tsx  MemoryPanel.test.tsx  SettingsPanel.test.tsx  WindowHeader.test.tsx
src/components/games/: Leaderboard.tsx  MinesweeperGame.tsx  SnakeGame.tsx  SudokuGame.tsx  TwentyFourGame.tsx
src/components/games/__tests__/: MinesweeperGame.test.tsx  SudokuGame.test.tsx  TwentyFourGame.test.tsx
src/lib/: leaderboard.ts
src/stores/: appStore.ts
src/stores/__tests__/: appStore.test.ts
src/test/: setup.ts
src/types/: chat.ts  companion.ts  memo.ts  settings.ts
